# powerpoint-automation-mcp

./: .gitignore  README.md  pyproject.toml
server/: __main__.py  server.py
src/mcp_ppt_server/: server.py
